Created endpoints of submitting and creating jobs
