# service/aspnetcore/src/thumbnailService/Controllers/MiscApi.cs
@@ -1,0 +1,43 @@
+/*
+ * 3D Model Thumbnail Service
+ *
+ * Service for generating thumbnails from 3D models
+ *
+ * The version of the OpenAPI document: 0.0.1
+ * 
+ * Generated by: https://openapi-generator.tech
+ */
+
+using System;
+using System.Collections.Generic;
+using System.ComponentModel.DataAnnotations;
+using Microsoft.AspNetCore.Authorization;
+using Microsoft.AspNetCore.Mvc;
+using Microsoft.AspNetCore.Http;
+using Swashbuckle.AspNetCore.Annotations;
+using Swashbuckle.AspNetCore.SwaggerGen;
+using Newtonsoft.Json;
+using thumbnailService.Attributes;
+using thumbnailService.Models;
+
+namespace thumbnailService.Controllers
+{ 
+    /// <summary>
+    /// 
+    /// </summary>
+    [ApiController]
+    public abstract class MiscApiController : ControllerBase
+    { 
+        /// <summary>
+        /// 
+        /// </summary>
+        /// <remarks>Checking service is online and responsive.</remarks>
+        /// <response code="200">Ping response</response>
+        [HttpGet]
+        [Route("/ping")]
+        [ValidateModelState]
+        [SwaggerOperation("GetPing")]
+        [SwaggerResponse(statusCode: 200, type: typeof(InlineResponse200), description: "Ping response")]
+        public abstract IActionResult GetPing();
+    }
+}
