# service/aspnetcore/src/thumbnailService/Models/JobStatus.cs
@@ -1,0 +1,55 @@
+/*
+ * 3D Model Thumbnail Service
+ *
+ * Service for generating thumbnails from 3D models
+ *
+ * The version of the OpenAPI document: 0.0.1
+ * 
+ * Generated by: https://openapi-generator.tech
+ */
+
+using System;
+using System.Linq;
+using System.Text;
+using System.Collections.Generic;
+using System.ComponentModel;
+using System.ComponentModel.DataAnnotations;
+using System.Runtime.Serialization;
+using Newtonsoft.Json;
+using thumbnailService.Converters;
+
+namespace thumbnailService.Models
+{ 
+        /// <summary>
+        /// Gets or Sets JobStatus
+        /// </summary>
+        [TypeConverter(typeof(CustomEnumConverter<JobStatus>))]
+        [JsonConverter(typeof(Newtonsoft.Json.Converters.StringEnumConverter))]
+        public enum JobStatus
+        {
+            
+            /// <summary>
+            /// Enum CreatedEnum for Created
+            /// </summary>
+            [EnumMember(Value = "Created")]
+            CreatedEnum = 1,
+            
+            /// <summary>
+            /// Enum AwaitingModelEnum for AwaitingModel
+            /// </summary>
+            [EnumMember(Value = "AwaitingModel")]
+            AwaitingModelEnum = 2,
+            
+            /// <summary>
+            /// Enum ProcessingEnum for Processing
+            /// </summary>
+            [EnumMember(Value = "Processing")]
+            ProcessingEnum = 3,
+            
+            /// <summary>
+            /// Enum FinishedEnum for Finished
+            /// </summary>
+            [EnumMember(Value = "Finished")]
+            FinishedEnum = 4
+        }
+}
